--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6"
   },
